data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4189.wast
;; 8. **Test for Boundary Violation Leading to Infinite Loop**:    Implement a boundary violation by using `call_indirect` with an index that exceeds the valid range within a loop. If the implementation doesn't correctly trap for the out-of-bounds error, it could result in an infinite loop.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $f1 (type $sig) (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func (result i32)
      (local i32)
      (local.set 0 (i32.const 10))
      (loop $loop
        (br_if $loop
          (call_indirect (type $sig) (local.get 0) (local.get 0))
        )
      )
    )
  )
  "out of bounds table index"
)